--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "event-handler": "NODE_ENV=development node src/eventHandler.js",
     "test": "NODE_ENV=test mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "got": "^11.7.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.0",
-    "sequelize-cli": "^6.2.0"
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
