--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
+    "sequelize-to-json": "^0.10.4",
     "sqlite3": "^5.0.0",
     "stream": "0.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "chain": "^0.1.3",
     "mocha": "^8.1.3"
   }
