--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-paginate": "^1.0.2",
     "got": "^11.7.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "chai-json-equal": "0.0.1",
     "chain": "^0.1.3",
     "mocha": "^8.1.3"
   }
