--- a/db-config.json
+++ b/db-config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "dialect": "sqlite",
-    "logging": true,
+    "logging": false,
     "storage": "developement_sqlite.db"
   },
   "test": {
