--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-paginate": "^1.0.2",
+    "express-ws": "^4.0.0",
     "got": "^11.7.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
@@ -21,13 +22,15 @@
     "sequelize-cli": "^6.2.0",
     "sequelize-to-json": "^0.10.4",
     "sqlite3": "^5.0.0",
-    "stream": "0.0.2"
+    "stream": "0.0.2",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "chai-json-equal": "0.0.1",
     "chain": "^0.1.3",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "redis-mock": "^0.54.0"
   }
 }
