--- a/config/eh-config.json
+++ b/config/eh-config.json
@@ -10,6 +10,12 @@
         "EH_STREAM_DOMAIN": "localhost",
         "EH_STREAM_PORT": 50101,
         "EH_STREAM_PATH": "events"
+    },
+    "production": {
+        "EH_STREAM_PROTOCOL": "http",
+        "EH_STREAM_DOMAIN": "localhost",
+        "EH_STREAM_PORT": 50101,
+        "EH_STREAM_PATH": "events"
     }
   }
   
